# BlackBox-HTTP-Discovery

./: Cargo.toml  Dockerfile  config.yaml  docker-compose.yaml  prometheus.yml
.github/workflows/: build-and-deploy.yaml  docker-build.yaml
deploy/ops/: config.yaml  deploy.yaml  kustomization.yaml
deploy/prod/: config.yaml  deploy.yaml  kustomization.yaml  scrape.yaml  svc.yaml
src/: config.rs  main.rs  model.rs  router.rs
