[package]
name = "blackbox-http-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "^0.9"
clap = { version = "4.5", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
axum-test = "18"
tokio-test = "0.4"
